fixed the carousel alignment, colors, and added our logo to the slides

--- a/frosh2015/css/bs-overrides.css
+++ b/frosh2015/css/bs-overrides.css
@@ -14,5 +14,23 @@
 }
 
 .row-fluid {
-  padding-top: 100px;  
+        padding-top: 100px;  
+}
+
+.carousel-inner > .item > img {
+        margin: 0 auto;
+}
+
+.carousel-indicators {
+        bottom: -50px;  
+}
+
+.carousel-indicators li {
+        
+        border: 2px solid #1e8eaf;
+}
+
+.carousel-indicators .active {
+        background-color: #e88530;
+        border: 2px solid #e88530;
 }
